--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ www_admin/slides/*
 !www_admin/slides/index.php
 www_party/database.inc.php
 www_party/prototype.js
-www_party/template.html
+#www_party/template.html
